fix smooth scrollbar

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2485,7 +2485,7 @@ footer a:hover {
   /* opacity: 0; */
   /* transform: scale(0.1); */
   /* transition: 0.55s ease-in-out; */
-  opacity: 0;
+  opacity: 1;
 }
 .transition-fade .art-a {
   transform: scale(1);
